# cgcv

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cg/: CMakeLists.txt  Makefile  cmake_install.cmake
cg/common/: CMakeLists.txt  Makefile  cmake_install.cmake  surface.cpp  surface.h
cg/common/cg1framework/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Makefile  Ray.h  Scene.cpp  Scene.h  Triangle.h  cmake_install.cmake  config_utils.h  main.cpp  scene_builder.cpp  scene_builder.h
cg/task1a/: CMakeLists.txt  Makefile  RayTracer1a.cpp  Scene1a.cpp  Scene1a.h  cgtask1a  cmake_install.cmake  cube.xml  magnolia.xml  task1a.cpp  vader.xml
cg/task1b/: CMakeLists.txt  Makefile  RayTracer1b.cpp  RayTracer1b.h  Scene1b.cpp  Scene1b.h  bla.xml  bla2.xml  bla3.xml  cgtask1b  cmake_install.cmake  cr90.xml  cube_lighttest.xml  cube_simple.xml  cube_textured.xml  plane_multilight.xml  plane_specular.xml  reflecting_cube.xml  reflecting_plane.xml  reflecting_plane_multibounce.xml  reflecting_sphere.xml  shadow_test.xml  task1b 1.cpp  task1b.cpp  two_mirrors.xml  two_mirrors_damped.xml  vader.xml  xwing.xml  xwing_small.xml
cgcvcommon/: Makefile  cfg_config.cpp  cfg_container.cpp  cmake_install.cmake  interface.h
cgcvcommon/lpng158/: pngrtran.c
cgcvcommon/tinyxml/: Makefile  cmake_install.cmake
cv/: Makefile  cmake_install.cmake
cv/task1a/: CMakeLists.txt  Makefile  cmake_install.cmake  cvtask1a  herman.xml  main.cpp  superman.xml
cv/task1b/: CMakeLists.txt  Makefile  aaaa.txt  cmake_install.cmake  cvtask1b  inffeld.xml  main 1.cpp  main.cpp  mario.xml  out  startrek.xml
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  (+2 more)
(+2 files in other folders)
